# job

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  firestore.indexes.json  gcp.env.example  mvp_feasibility.md  pyproject.toml
.claude/: settings.local.json
alembic/: .gitignore  env.py
app/: README.md  main.py
docs/: MASTER_PLAN.md  ONBOARDING.md  ROADMAP.md  SIZING.md  TODO_VALET_INTEGRATION.md  architecture_diagram.html  architecture_plan_v3_gcp_en.md  embedding-module-refactor-plan.md  embedding-retry-fallback-rules.md  llm-match-reranker-refactor-plan.md  llm-module-refactor-plan.md  llm-usage-tracking.md  location-table-split-plan.md
scripts/: backfill_job_embeddings_gemini.py  backfill_job_locations.py  backfill_job_locations_v3.py  backfill_structured_jd.py  backfill_unknown_primary_locations_v4.py  batch_parse_jd.py  bootstrap  bootstrap_local_supabase_schema.sh  build_final_source_candidates.py  ci  export_missing_ats_identifiers.py  export_missing_greenhouse_identifiers.py  fmt  import_apple_jobs.py  import_ashby_jobs.py  import_eightfold_jobs.py  import_greenhouse_jobs.py  import_lever_jobs.py  import_smartrecruiters_jobs.py  import_stapply_sources.py  import_tiktok_jobs.py  import_uber_jobs.py  import_verified_source_candidates.py  install_hooks  lint  match_experiment.py  migrate_job_blobs_to_storage.py  run_enrichment.py  run_scheduled_ingests.py  sync_geonames_reference.py  test  uv  verify_ats_identifiers.py  verify_greenhouse_identifiers.py  with_local_supabase_env.sh
supabase/: config.toml  seed.sql
tests/: conftest.py  test_fetchers.py  test_fetchers_ashby.py  test_fetchers_company_apis.py  test_fetchers_eightfold.py  test_fetchers_github.py  test_fetchers_lever.py  test_fetchers_smartrecruiters.py  test_mappers.py  test_mappers_ashby.py  test_mappers_lever.py  (+3 more)
(+363 files in other folders)
