[project]
name = "job"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.133.1",
    "greenlet>=3.2.4",
    "httpx>=0.28.1",
    "litellm>=1.0.0",
    "pgvector>=0.4.1",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.37",
    "tenacity>=9.1.2",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "ipykernel>=7.2.0",
    "nbformat>=5.10.4",
    "pandas>=3.0.1",
    "plotly>=6.5.2",
    "pre-commit>=4.3.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
    "ruff>=0.13.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
testpaths = ["tests"]

[tool.pyrefly]
python-interpreter-path = ".venv/bin/python"

[tool.pyright]
typeCheckingMode = "off"
reportMissingImports = "none"
reportMissingModuleSource = "none"

[tool.ruff]
line-length = 100
target-version = "py312"
